# openapi.json
@@ -214,6 +214,194 @@
                 }
             }
         },
+        "/api/auth/forgot-password": {
+            "post": {
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Forgotten password",
+                "description": "Create a new password reset request",
+                "operationId": "authForgotPassword",
+                "requestBody": {
+                    "description": "Pass user information",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "email"
+                                ],
+                                "properties": {
+                                    "email": {
+                                        "type": "string",
+                                        "format": "email",
+                                        "example": "jan.novak@seznam.cz"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Password reset link was sent"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Unable to send password reset link"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation errors",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "examples": {
+                                    "string1": {
+                                        "summary": "Invalid email",
+                                        "value": "The selected email is invalid."
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/auth/reset-password": {
+            "post": {
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Reset password",
+                "description": "Reset password by e-mail and token",
+                "operationId": "authResetPassword",
+                "requestBody": {
+                    "description": "Pass user information",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "token",
+                                    "email",
+                                    "password",
+                                    "password_confirmation"
+                                ],
+                                "properties": {
+                                    "token": {
+                                        "type": "string",
+                                        "format": "email",
+                                        "example": "$2y$10$4cE1I9WZEFEelCoXaC6rNO/vGfXuUcQL0NKDkaFGoIHbS0mQ4YrWW"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "format": "email",
+                                        "example": "jan.novak@seznam.cz"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "format": "password",
+                                        "example": "PassWord12345"
+                                    },
+                                    "password_confirmation": {
+                                        "type": "string",
+                                        "format": "password",
+                                        "example": "PassWord12345"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Password has been successfuly reseted"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Unable to reset password"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation errors",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "examples": {
+                                    "string1": {
+                                        "summary": "Email already exists",
+                                        "value": "The email has already been taken."
+                                    },
+                                    "string2": {
+                                        "summary": "Required field",
+                                        "value": "The * field is required."
+                                    },
+                                    "string3": {
+                                        "summary": "Password confirmation",
+                                        "value": "The password confirmation does not match."
+                                    },
+                                    "string4": {
+                                        "summary": "Password length",
+                                        "value": "The password must be at least 8 characters."
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/blacklists/paginate": {
             "post": {
                 "tags": [
@@ -403,7 +591,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/api/blacklists/{blacklist_id}": {
             "delete": {
                 "tags": [
                     "blacklist"
@@ -411,33 +601,18 @@
                 "summary": "Delete blacklist record",
                 "description": "Delete blacklist record",
                 "operationId": "blacklistsDestroy",
-                "requestBody": {
-                    "description": "Pass blacklist record identificator",
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "_method",
-                                    "id"
-                                ],
-                                "properties": {
-                                    "_method": {
-                                        "description": "Router method specification - always 'delete'",
-                                        "type": "string",
-                                        "example": "delete"
-                                    },
-                                    "id": {
-                                        "description": "Identificator of the blacklist record",
-                                        "type": "integer",
-                                        "example": "15"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
+                "parameters": [
+                    {
+                        "name": "blacklist_id",
+                        "in": "path",
+                        "description": "ID of the blacklist record",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        },
+                        "example": "123"
                     }
-                },
+                ],
                 "responses": {
                     "200": {
                         "description": "Success",
@@ -447,7 +622,7 @@
                                     "properties": {
                                         "message": {
                                             "type": "string",
-                                            "example": "blacklist.deleted"
+                                            "example": "Blacklist has been successfuly deleted"
                                         }
                                     },
                                     "type": "object"
@@ -463,7 +638,23 @@
                                     "properties": {
                                         "error": {
                                             "type": "string",
-                                            "example": "blacklist.delete_failed"
+                                            "example": "Unable to delete blacklist"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Blacklist record was not found"
                                         }
                                     },
                                     "type": "object"
@@ -737,7 +928,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/api/users/{hash}": {
             "delete": {
                 "tags": [
                     "user"
@@ -745,33 +938,18 @@
                 "summary": "Delete user record",
                 "description": "Delete user record",
                 "operationId": "userDestroy",
-                "requestBody": {
-                    "description": "Pass blacklist record identificator",
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "_method",
-                                    "hash"
-                                ],
-                                "properties": {
-                                    "_method": {
-                                        "description": "Router method specification - always 'delete'",
-                                        "type": "string",
-                                        "example": "delete"
-                                    },
-                                    "hash": {
-                                        "description": "Identificator of the user record",
-                                        "type": "string",
-                                        "example": "97dfab9823664071a0b767ae3eb5a0ca"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
+                "parameters": [
+                    {
+                        "name": "hash",
+                        "in": "path",
+                        "description": "User identification hash",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "97dfe966c5a243ff8c7c9d7f0866317e"
                     }
-                },
+                ],
                 "responses": {
                     "200": {
                         "description": "Success",
@@ -781,7 +959,7 @@
                                     "properties": {
                                         "message": {
                                             "type": "string",
-                                            "example": "user.deleted"
+                                            "example": "User has been successfully deleted"
                                         }
                                     },
                                     "type": "object"
@@ -797,7 +975,23 @@
                                     "properties": {
                                         "error": {
                                             "type": "string",
-                                            "example": "user.delete_failed"
+                                            "example": "Unable to delete user"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "User not found"
                                         }
                                     },
                                     "type": "object"
